1. fixed padding of 'register now' button on homapage 2. fixed horizontal alignment of 'save search' button on user listing page 3. added space to 'recently joined' section on user search list in mobile

--- a/public/user_assets/css/public-profile.css
+++ b/public/user_assets/css/public-profile.css
@@ -510,6 +510,28 @@ ul.in_box_brdr li:hover {
    /* background-color:#f47e2a;  */
 }
 
+#nofriend .close {
+	margin-top: -10px;
+	position: absolute;
+	right: 13px;
+}
+
+#nofriend .modal-body {
+	padding: 0 15px;
+}
+
+#nofriend .modal-body .alert {
+	margin:0;
+	padding: 8px 10px;
+	background: none;
+	border: none;
+	font-weight: bold;
+}
+
+#nofriend .modal-header, #nofriend .modal-footer {
+	padding: 8px 10px;
+}
+
 @media (max-width:768px) {
 	.currentuserimg {
 		height: auto;
